# gameoflife-cpp

./: .gitignore  CMakeLists.txt  README.md
includes/: CellState.hh  Grid.hh  Operation.hh  Sim.hh
src/: Grid.cpp  Operation.cpp  Sim.cpp  main.cpp
